test/functions/bradc/arrayFormals/staticChecksOnly/formalDomainChecks3.good
formalDomainChecks3.chpl:7: error: Rank mismatch passing array argument: expected 1 but got 2
