test/functions/bradc/arrayFormals/staticChecksOnly/formalDomainChecks3.compopts
  # formalDomainChecks3.good
--no-formal-domain-checks
--no-checks
--fast
